2018-02-08

        * Bug fix version 1.5.1 released
        ================================


2018-01-23

        * Version 1.5.0 released
        =========================

        Change DATE_OBS, DATE_END, TIME_OBS and TIME_END FITS keywords into DATA-OBS,
          DATE-END, TIME-OBS and TIME-END
        Non-point source model throws exception in On/Off fitting (#2296)
        Set reference time to CTA reference time in GCTAEventcube, GCTAEventList and
          GCTACubeExposure (#2295)
        GCsv interprets lines in CSV files starting with # as comment lines (#2291)
        Add GPha::counts_spectrum() and GPha::backscal_spectrum() methods (#2290)
        Add GNdarray sign(), operator*= and operator/= (#2290)
        Add GSkyMap::counts() and GSkyMap::flux() methods and clip() friend operator
          (#2290)
        Add GSkyMap::array() method to Python interface (#2285)
        Add Off sky regions to GCTAObservation (#2284)
        By default require cfitsio library (#2265)
        CTA observations handle "statistic" attribute in XML file (#2238)
        Use CSTAT and CHI2 instead of POISSON and GAUSSIAN for statistic (#2237)
        Changed GObservation::statistics() to statistic() (#2238)
        Prevent negative response values for COMPTEL IRF (#2234)
        Add GCTAOnOffObservation PHA, ARF and RMF constructor (#2231)
        Implement observation stacking in GCTAOnOffObservation (#2228)
        Implement region integration in GCTAOnOffObservation (#2210)
        Implement WSTAT in GCTAOnOffObservation (#2209)
        Add GPha arithmetic operators and scale access methods
        Add GArf arithmetic operators
        Add GRmf arithmetic operators
        Add GEbounds equality and inequality operators
        Improve efficiency of GGti::contains() method.
        Add GFitsTableCol::scale() method (#2191)
        Implement code generator for GammaLib extensions (#2190)
        Implement COMPTEL event list support (#2187)