@@ -10,7 +10,8 @@ GammaLib 1.5.1 is a bug fix release for GammaLib release 1.5.
 
 The following bugs were fixed:
 
-* ...
+* Correct sky map smoothing
+
 
 The following improvements were made:
 
