@@ -1,7 +1,9 @@
-2018-02-08
+2018-02-13
 
         * Bug fix version 1.5.1 released
         ================================
+
+        Correct sky map smoothing.
 
 
 2018-01-23
